Fixed alignment of EmptyCollection component

--- a/src/components/Collections/Collection.styles.css
+++ b/src/components/Collections/Collection.styles.css
@@ -112,4 +112,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  height: calc(100vh - 75px);
 }
